src/main/java/com/example/MyBookShopApp/errors/WrongResultException.java
package com.example.MyBookShopApp.errors;

public class WrongResultException extends Exception{

    public WrongResultException(String message) {
        super(message);
    }
}
